force-app/main/default/objects/ABHI_Create_Case_Validations__mdt/ABHI_Create_Case_Validations__mdt.object-meta.xml
<CustomObject>
    <label>ABHI Create Case Validations</label>
    <pluralLabel>ABHI Create Case Validations</pluralLabel>
</CustomObject>