force-app/main/default/objects/ABHI_Create_Case_Validations__mdt/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <label>Asset Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>