force-app/main/default/objects/ABHI_Create_Case_Validations__mdt/fields/Issue_Code__c.field-meta.xml
<CustomField>
    <fullName>Issue_Code__c</fullName>
    <label>Issue Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>