force-app/main/default/objects/ABHI_Create_Case_Validations__mdt/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <label>Nature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>