force-app/main/default/objects/ABHI_Create_Case_Validations__mdt/fields/Public_Groups__c.field-meta.xml
<CustomField>
    <fullName>Public_Groups__c</fullName>
    <description>store the name of the public group as semicolon seperated</description>
    <label>Public Groups</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>