force-app/main/default/objects/ABHI_Create_Case_Validations__mdt/fields/User_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>User_Source_Code__c</fullName>
    <label>User Source Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>