force-app/main/default/objects/ABHI_Create_Case_Validations__mdt/fields/Validation_Name__c.field-meta.xml
<CustomField>
    <fullName>Validation_Name__c</fullName>
    <label>Validation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>