force-app/main/default/objects/ABHI_Create_Case_Validations__mdt/listViews/ABHI_View.listView-meta.xml
<ListView>
    <fullName>ABHI_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Channel__c</columns>
    <columns>Source__c</columns>
    <columns>User_Source_Code__c</columns>
    <columns>Issue_Code__c</columns>
    <columns>Validation_Name__c</columns>
    <columns>Nature__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>ABHI</value>
    </filters>
    <label>ABHI View</label>
</ListView>